Fixed errors, eslint throwing big errors for using document, etc. as well as not liking web components???

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,12 @@
   "extends": "airbnb/base",
   "rules": {
     "no-underscore-dangle" : "off",
-	"no-plusplus": "off",
-	"import/extensions": "off"
+	  "no-plusplus": "off",
+	  "import/extensions": "off",
+    "no-param-reassign": 0
+  },
+  "env": {
+    "browser": true,
+    "node": true
   }
 }
